# kenp0m-sp0rts-analyzer

./: .claudeignore  .env.example  .gitignore  BASELINE_ANALYSIS_SUMMARY.md  CLAUDE.md  FANMATCH_ANALYSIS_2025-12-16.md  LOUISVILLE_TENNESSEE_CASE_STUDY.md  MONITORING_GUIDE.md  PRODUCTION_AUDIT.md  PROJECT_SCOPE.md  QUICK_START.md  README.md  analyze_captured_apis.py  analyze_dec17_full_schedule.py  analyze_dec17_games.py  analyze_fanmatch.py  analyze_games.py  analyze_todays_games.py  capture_odds_today.py  check_available_games.py  check_nba_lines.py  compare_predictions.py  diagnose_navigation.py  kenpom_vs_vegas_analysis.py  monitor_and_analyze.py  pyproject.toml  save_all_predictions.py  scrape_error.txt  scrape_overtime_cbb.py  test_production.py  update_result.py  vegas_lines_dec16.py  xgboost_tracker.py
.claude/: mcp.json  settings.json  settings.local.json
data/: injuries_covers.json  kenpom.db  kenpom_players_test.csv  monitoring_log.json  predictions_2025-12-20.json  predictions_tracker.db  team_aliases.json
docs/: ANALYTICS_ROADMAP.md  API_QUICK_REFERENCE.md  API_REVERSE_ENGINEERING_FINDINGS.md  DATA_GAPS_AND_ML_OPPORTUNITIES.md  EDGE_VALIDATION_GUARDRAILS.md  HIGH_VALUE_FEATURES_PLAN.md  KENPOM_ANALYTICS_GUIDE.md  KENPOM_API.md  KENPOM_API_UTILIZATION_PLAN.md  KENPOM_DATA_COVERAGE.md  KENPOM_MODULE_ARCHITECTURE.md  KenPom_System_Prompt.txt  LUCK_REGRESSION_DEEP_DIVE.md  LUCK_REGRESSION_IMPLEMENTATION.md  MATCHUP_ANALYSIS_FRAMEWORK.md  PHASE1_XGBOOST_RESULTS.md  PLAYER_IMPACT_SYSTEM.md  PREVENTING_FALSE_EDGES.md  PROJECT_SCOPE.md  QUICK_START_PREDICTIONS.md  README.md  SCHEMA_UPDATES_PLAN.md  SETUP_GUIDE.md  TEMPO_PACE_DEEP_DIVE.md  TEMPO_VALIDATION_SUMMARY.md  TIER2_IMPLEMENTATION_PLAN.md  XGBOOST_INTEGRATION_PLAN.md
examples/: analyze_game_example.py  basic_usage.py  comprehensive_integration_demo.py  comprehensive_matchup_demo.py  conference_power_ratings_demo.py  defensive_matchup_demo.py  experience_matchup_demo.py  four_factors_matchup_demo.py  integrated_prediction_demo.py  luck_regression_demo.py  matchup_analysis.py  point_distribution_demo.py  report_generator_demo.py  size_matchup_demo.py  stealth_scraper.py  tournament_simulator_demo.py
scripts/: README.md  backfill_2024.py  backfill_efficiency_tempo_2015_2024.py  cleanup_temp_files.py  collect_daily_data.py  compare_api_docs.py  compare_sklearn_vs_xgboost.py  daily_workflow.py  download_injury_report.py  fetch_and_train_xgboost.py  monitor_cbb_odds.py  populate_historical_data.py  predict_game.py  prepare_historical_data.py  reverse_engineer_api_docs.py  scrape_espn_results.py  test_beat_reporters.py  test_twitter_connection.py  train_model.py  train_on_real_data.py  validate_edge.py  validate_system.py  validate_tempo_features.py  validate_week1_checkpoints.py  validate_week5_checkpoints.py  verify_api.py
tests/: test_api_client.py  test_api_docs_reverse_engineer.py  test_comprehensive_matchup_analysis.py  test_conference_analytics.py  test_defensive_analysis.py  (+7 more)
(+129 files in other folders)
